# cobot-rs

./: .gitignore  Cargo.toml  LICENSE  README-template.md  espflash.toml  espflash_ports.toml  readme.md
.cargo/: config.toml
.github/workflows/: ci.yml  core.yml
docs/: debugging.md  how_to_run.md  lessons_learned.md  project_organization.md  testing.md  testing_strategy.md  troubleshooting_banner.md  understand_servo.md
docs/architecture/: rust_embedded_best_practices.md  simple_approach.md
scripts/: fix-banner.sh  setup.sh  test.sh
src/: main.rs  servo_controller.rs
tests/: README.md
