[package]
edition      = "2024"
name         = "cobot-rs"
authors      = ["Amadeu Cavalcante <amadeu01@gmail.com>"]
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "cobot-rs"
harness = false

[dependencies]
log = "0.4.17"
esp-idf-svc = { version = "0.51", features = ["native"] }
esp-idf-hal = { version = "0.45.2", features = ["native"] }
esp-idf-sys = { version = "0.36.1", features = ["native"] }
# embedded-svc = "=0.28.1"
anyhow = "1.0"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[build-dependencies]
embuild = "0.33"
